@@ -18,8 +18,7 @@ package docking.help;
 import java.awt.*;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.*;
 import java.util.*;
 import java.util.List;
 import java.util.Map;
@@ -101,6 +100,11 @@ public class HelpManager implements HelpService {
 	protected void registerHelp() {
 		mergePendingHelpSets();
 		Help.installHelpService(this);
+	}
+
+	@Override
+	public boolean isShowing() {
+		return mainHB.isDisplayed();
 	}
 
 	@Override
@@ -358,9 +362,9 @@ public class HelpManager implements HelpService {
 		// To do this, try making a URL out of the help string and doing a reverse lookup
 		URL URL = null;
 		try {
-			URL = new URL(helpIDString);
+			URL = URI.create(helpIDString).toURL();
 		}
-		catch (MalformedURLException e) {
+		catch (IllegalArgumentException | MalformedURLException e) {
 			// nothing we can do, fall through the method to the previous exception
 		}
 
